Make tests more location independent and update to run on AS6.0.M5. Update docs with additional text. JBTM-44
git-svn-id: https://anonsvn.jboss.org/repos/labs/labs/jbosstm/trunk@36005 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70